[package]
name = "taffy-clib"
version = "0.1.0"
edition = "2021"

[dependencies]
# taffy = { version = "*", path = "/home/xavier/projects/taffy" }
taffy = { git = "https://github.com/xavierzwirtz/taffy", branch = "boxednotsendasync" }
# taffy = "*"

[lib]
name = "taffy"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

